--- a/src/index.css
+++ b/src/index.css
@@ -13,3 +13,35 @@ body {
 ul[data-no-scroll="true"]::-webkit-scrollbar {
   display: none;
 }
+
+.avatar-cyan-500 {
+  @apply bg-cyan-500;
+}
+
+.avatar-red-500 {
+  @apply bg-red-500;
+}
+
+.avatar-yellow-500 {
+  @apply bg-yellow-500;
+}
+
+.avatar-green-500 {
+  @apply bg-green-500;
+}
+
+.avatar-blue-500 {
+  @apply bg-blue-500;
+}
+
+.avatar-indigo-500 {
+  @apply bg-indigo-500;
+}
+
+.avatar-purple-500 {
+  @apply bg-purple-500;
+}
+
+.avatar-pink-500 {
+  @apply bg-pink-500;
+}
